# student-performance-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
notebooks/: eda.ipynb  shap_explainability.ipynb
src/: config.py  exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_interpretability.py  model_trainer.py
src/pipeline/: predict_pipeline.py
tests/: conftest.py  test_config.py  test_data_ingestion.py  test_data_transformation.py  test_data_validation.py  test_model_trainer.py
